tests/paczka1/fuzzy1/11826359.err
Error in line 6: KC8yay8 A944 77,9
Error in line 10: 3v6ckWl A335 11,0
Error in line 15: KC8yay8 A32 97,2
Error in line 20: uSP8Skenf A335 92,3
Error in line 32: A32 A32 21,2
